[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/HelperScenes/DateLine.gd" type="Script" id=1]

[node name="DateLine" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -724.0
margin_bottom = -600.0
rect_min_size = Vector2( 300, 30 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 274.0
margin_bottom = 30.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Label" type="Label" parent="HBoxContainer"]
margin_right = 34.0
margin_bottom = 30.0
size_flags_vertical = 1
text = "Date:"
align = 1
valign = 1

[node name="LineEdit" type="LineEdit" parent="HBoxContainer"]
margin_left = 38.0
margin_right = 96.0
margin_bottom = 30.0
rect_min_size = Vector2( 40, 30 )
size_flags_horizontal = 0
size_flags_vertical = 0
align = 1
max_length = 2

[node name="LineEdit2" type="LineEdit" parent="HBoxContainer"]
margin_left = 100.0
margin_right = 158.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_vertical = 0
align = 1

[node name="LineEdit3" type="LineEdit" parent="HBoxContainer"]
margin_left = 162.0
margin_right = 220.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
hint_tooltip = "Year"
size_flags_vertical = 0
align = 1
max_length = 4
placeholder_text = "yyyy"

[node name="Button" type="Button" parent="HBoxContainer"]
margin_left = 224.0
margin_right = 274.0
margin_bottom = 30.0
rect_min_size = Vector2( 50, 30 )
size_flags_horizontal = 0
size_flags_vertical = 0
text = "today"
[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_Button_pressed"]
